force-app/main/default/objects/Product_Images__c/Product_Images__c.object-meta.xml
<CustomObject>
    <label>Product Images</label>
    <nameField>
        <label>Product Images Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Images</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>