force-app/main/default/objects/Product_Images__c/fields/Resource_URL__c.field-meta.xml
<CustomField>
    <fullName>Resource_URL__c</fullName>
    <inlineHelpText>Contains the fully Qualified Path of the image to be shown on the product detail page</inlineHelpText>
    <label>Resource URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>