force-app/main/default/objects/Product_Images__c/fields/Static_Resource__c.field-meta.xml
<CustomField>
    <fullName>Static_Resource__c</fullName>
    <inlineHelpText>Required if Static Resource is Selected in Image Type</inlineHelpText>
    <label>Static Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>