force-app/main/default/objects/Product_Images__c/validationRules/ResourceURLValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ResourceURLValidation</fullName>
    <active>true</active>
    <description>Resource URL and static resource must be populated if the Image Type is Selected as Static Resource</description>
    <errorConditionFormula>ISPICKVAL(Type__c , &apos;Static Resource&apos;) &amp;&amp; (
ISBLANK( Resource_URL__c ) || ISBLANK( Static_Resource__c ))</errorConditionFormula>
    <errorMessage>Resource URL and static resource must be populated if the Image Type is Selected as Static Resource</errorMessage>
</ValidationRule>