force-app/main/default/objects/Product_Images__c/validationRules/StaticResourceValidation2.validationRule-meta.xml
<ValidationRule>
    <fullName>StaticResourceValidation2</fullName>
    <active>true</active>
    <description>Static Resource, Resource URL, and URL must be left blank if the Image Type is selected as None</description>
    <errorConditionFormula>ISPICKVAL(Type__c , &apos;None&apos; ) &amp;&amp; 
( NOT ( ISBLANK (Static_Resource__c)) || 
 NOT ( ISBLANK (Resource_URL__c ))
)</errorConditionFormula>
    <errorMessage>Static Resource, Resource URL, and URL must be left blank if the Image Type is selected as None</errorMessage>
</ValidationRule>